--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="eventos.js" type="text/javascript"></script>
-    <title>Document</title>
+    <title>Taller Eventos</title>
+
+    <style>
+        .button1 {
+            padding: 5px;
+            background-color: green;}
+    </style>
+
 </head>
 <body>
-    <button onclick="saludar()">Saludar</button>
+
+<div class="button1">
+    <button onclick="alert('Hola!')">Saludar</button>
+</div>
+
 </body>
 </html>
