--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="button1">
-    <button onclick="alert('Hola!')">Saludar</button>
+    <button id="buttonSaludar">Saludar</button>
 </div>
 
 </body>
